feat(services): manage local support processes
Allocate named dynamic ports, resolve service-local placeholders, expose standard environment variables, and wait for HTTP or TCP readiness. External services share the same health contract, while managed services receive bounded explicit cleanup followed by forced process-tree termination.